--- a/style.css
+++ b/style.css
@@ -9,12 +9,10 @@ body{
 #web a{
     text-decoration: none;
     color: white;
-    padding: 2vw;  
+    padding: 1rem; 
+    margin: 2vw; 
     border-style: groove;
-    float: none;
-    margin: 5vw;
-    margin-top: 10vh;  
-
+    border-radius: 5rem;
 }
 
 #web a:hover{
